--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="team-title">
-                                <h5>FSolomon Yaw Adeklo</h5>
+                                <h5>Solomon Yaw Adeklo</h5>
                                 <span>CTO</span>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
       <div class="row">
 
         <div class="col-md-12">
-          <h3 class="big-heading">Convert Yor customer's phone into a billboard</h3>
+          <h3 class="big-heading">Convert your customer's phone into a billboard</h3>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
