--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">Habdbill Features</h2><hr>
+    <h2 class="section-heading">Handbill Features</h2><hr>
      <h2>Features for users </h2>
      <p>The moment you become a user on handbill, you have the freedom to select a category of ads that interests you. On Handbill you earn rewards in the form of money by engaging with your favourite brands. On handbill you can also become an agent to warehousemen(advertisers) by selling products that they put on offer. The warehousemen pay a commission to you for selling their products.     </p>
     <hr>
