--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Featueres</a>
+              <a class="nav-link" href="#pricing">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#cta">Download</a>
